compiler/tools/fpp-check/test/event/duplicate_name.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/duplicate_name.fpp: 4.3
  event E severity activity low format ""
  ^
error: duplicate event name E
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/event/duplicate_name.fpp: 3.3
  event E severity activity low format ""
  ^
